<resources>
    <string name="app_name">Helpy</string>
    <string name="first">First View</string>
    <string name="red">RED</string>
    <string name="blue">BLUE</string>
    <string name="green">GREEN</string>

    <string name="one">1</string>
    <string name="two">2</string>v
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="star">*</string>
    <string name="hashTag">#</string>

    <string name="hint">Enter the Number</string>
    <string name="X">X</string>
    <string name="dial">Dial</string>

    <string name="add">Add</string>
    <string name="title_activity_details">Details</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment</string>

</resources>
