<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:orientation="vertical"
    tools:context=".call">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="bottom">

        <LinearLayout
            android:id="@+id/fristLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="6"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editText2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_gravity="bottom"
                android:textSize="30sp"
                android:hint="@string/hint"
                android:inputType="phone" />

            <Button
                android:id="@+id/buttonDelete"
                android:layout_width="275dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/X"
                android:textAlignment="center"
                android:layout_gravity="bottom"
                android:textColor="@color/colorAccent"
                android:textSize="30sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/secondLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonOne"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_weight="1"
                android:text="@string/one"
                android:textColor="@color/colorBlack"
                android:textSize="30sp"
                android:textAlignment="center"
                android:textStyle="bold"/>

            <Button
                android:id="@+id/buttonTwo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_weight="1"
                android:text="@string/two"
                android:textColor="@color/colorBlack"
                android:textSize="30sp"
                android:textAlignment="center"
                android:textStyle="bold"/>

            <Button
                android:id="@+id/buttonThree"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_weight="1"
                android:text="@string/three"
                android:textColor="@color/colorBlack"
                android:textSize="30sp"
                android:textAlignment="center"
                android:textStyle="bold"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/thirdLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonFour"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_weight="1"
                android:text="@string/four"
                android:textColor="@color/colorBlack"
                android:textSize="30sp"
                android:textAlignment="center"
                android:textStyle="bold"/>

            <Button
                android:id="@+id/buttonFive"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_weight="1"
                android:text="@string/five"
                android:textColor="@color/colorBlack"
                android:textSize="30sp"
                android:textAlignment="center"
                android:textStyle="bold"/>

            <Button
                android:id="@+id/buttonSix"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_weight="1"
                android:text="@string/six"
                android:textColor="@color/colorBlack"
                android:textSize="30sp"
                android:textAlignment="center"
                android:textStyle="bold"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/forthLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonSeven"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_weight="1"
                android:text="@string/seven"
                android:textColor="@color/colorBlack"
                android:textSize="30sp"
                android:textAlignment="center"
                android:textStyle="bold"/>

            <Button
                android:id="@+id/buttonEight"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_weight="1"
                android:text="@string/eight"
                android:textColor="@color/colorBlack"
                android:textSize="30sp"
                android:textAlignment="center"
                android:textStyle="bold"/>

            <Button
                android:id="@+id/buttoNine"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_weight="1"
                android:text="@string/nine"
                android:textColor="@color/colorBlack"
                android:textSize="30sp"
                android:textAlignment="center"
                android:textStyle="bold"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/fifthLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonStar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_weight="1"
                android:text="@string/star"
                android:textColor="@color/colorBlack"
                android:textSize="30sp"
                android:textAlignment="center"
                android:textStyle="bold"/>

            <Button
                android:id="@+id/buttonZero"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_weight="1"
                android:text="@string/zero"
                android:textColor="@color/colorBlack"
                android:textSize="30sp"
                android:textAlignment="center"
                android:textStyle="bold"/>

            <Button
                android:id="@+id/buttonHash"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_weight="1"
                android:text="@string/hashTag"
                android:textColor="@color/colorBlack"
                android:textSize="30sp"
                android:textAlignment="center"
                android:textStyle="bold"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/sixthLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonDial"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/dial"
                android:textSize="20sp"
                android:textColor="#ffffff"
                android:textAlignment="center"
                android:background="@color/colorAccent"/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>